--- a/action.yaml
+++ b/action.yaml
@@ -27,7 +27,7 @@ runs:
       if: ${{ inputs.release }} == 'true'
       shell: bash
       run: |
-         - apk add --update git openssh-client sed rsync
+           apk add --update git openssh-client sed rsync
            mkdir -p ~/.ssh/
            echo "{{ $inputs.deploy_token }}" > ~/.ssh/id_rsa
            chmod 600 ~/.ssh/id_rsa
