--- a/action.yaml
+++ b/action.yaml
@@ -29,9 +29,9 @@ runs:
       run: |
            export CI_COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
            apk add --update git openssh-client sed rsync
-           mkdir -p ~/.ssh/
-           echo "{{ $inputs.deploy_token }}" > ~/.ssh/id_rsa
-           chmod 600 ~/.ssh/id_rsa
+           mkdir -p /root/.ssh/
+           echo "{{ $inputs.deploy_token }}" > /root/.ssh/id_rsa
+           chmod 600 /root/.ssh/id_rsa
            git config --global user.email "foerster@forestsoft.de"
            git config --global user.name "Sebastian"
            $GITHUB_ACTION_PATH/release.sh
