--- a/action.yaml
+++ b/action.yaml
@@ -31,6 +31,7 @@ runs:
            apk add --update git openssh-client sed rsync
            mkdir -p /root/.ssh/
            echo "{{ $inputs.deploy_token }}" > /root/.ssh/id_rsa
+           ls -la /root/.ssh/
            chmod 600 /root/.ssh/id_rsa
            git config --global user.email "foerster@forestsoft.de"
            git config --global user.name "Sebastian"
