--- a/action.yaml
+++ b/action.yaml
@@ -30,7 +30,7 @@ runs:
            export CI_COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
            apk add --update git openssh-client sed rsync
            mkdir -p /root/.ssh/
-           echo "{{ inputs.deploy_token }}" > /root/.ssh/id_rsa
+           echo "${{ inputs.deploy_token }}" > /root/.ssh/id_rsa
            ls -la /root/.ssh/
            chmod 600 /root/.ssh/id_rsa
            git config --global user.email "foerster@forestsoft.de"
