use new release

--- a/action.yaml
+++ b/action.yaml
@@ -19,19 +19,16 @@ runs:
       shell: bash
       run: |
          set -x
-         if [ ! -d "./.ct" ]; then
-           cp -R $GITHUB_ACTION_PATH/.ct .
+         if [ -d "./.ct" ]; then
+           rm -Rf /root/.ct/
+           cp -R ./.ct /root/.ct/
          fi
-         $GITHUB_ACTION_PATH/build.sh ${{ inputs.chart }}
+         /ct/build.sh ${{ inputs.chart }}
     - name: "Release chart"
       if: inputs.release == 'true'
       shell: bash
       run: |
            export CI_COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-           apk add --update git openssh-client sed rsync
-           mkdir -p /root/.ssh/
            echo "${{ inputs.deploy_token }}" > /root/.ssh/id_rsa
            chmod 600 /root/.ssh/id_rsa
-           git config --global user.email "foerster@forestsoft.de"
-           git config --global user.name "Sebastian"
-           $GITHUB_ACTION_PATH/release.sh
+           /ct/release.sh
