--- a/action.yaml
+++ b/action.yaml
@@ -24,10 +24,13 @@ runs:
          git config --global --add safe.directory $(pwd)
          mkdir -p /root/.kube/
          echo "${{ inputs.kubeconfig }}" | base64 -d  >  /root/.kube/config
+         mkdir -p ~/.kube/
+         echo "${{ inputs.kubeconfig }}" | base64 -d  >  ~/.kube/config
          export CI_COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
          echo "${{ inputs.deploy_token }}" > /root/.ssh/id_rsa
          chmod 600 /root/.ssh/id_rsa
          chmod 600 /root/.kube/config
+         chmod 600 ~/.kube/config
     - name: "Build chart"
       shell: bash
       run: |
